CALCULATOR-01 || Complete UI of calculators in Crash HTML CSS

--- a/Overtime.html
+++ b/Overtime.html
@@ -29,7 +29,7 @@
 
                             <div class="grid-container">
                                 <div>
-                                    <h2 class="text-xs font-semibold">Currency</h2>
+                                    <h2 class="">Currency</h2>
                                     <div class="currency-selector">
                                         <button onclick="handleCurrencyChange('$')" class="selected">$</button>
                                         <button onclick="handleCurrencyChange('€')" class="selected">€</button>
