--- a/Hourly-to-Salary.html
+++ b/Hourly-to-Salary.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hourly Calculator</title>
     <link rel="stylesheet" href="Hourly-to-Salary.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -25,7 +24,7 @@
             <div class="grid-top">
                 <div class="flex-item">
                     <div class="absolute-box">
-                        <h1 class="heading">Salary Calculator</h1>
+                        <h1 class="heading">Hourly Calculator</h1>
 
                         <div class="grid-container">
                             <div>
@@ -58,7 +57,7 @@
                                     class="w-full p-2 mt-2 border border-gray-300 rounded-md">
                             </div>
                             <div class="mt-6">
-                                <button class="calculate-button" onclick="calculateRates()">Calculate</button>
+                                <button class="calculate-button">Calculate</button>
                             </div>
                         </div>
                         <div id="calculated-salary" class="calculated-salary"></div>
@@ -91,95 +90,14 @@
 
             <div class="popup" id="popup">
                 <div class="popup-content">
-                    <p>Please fill in all required fields with valid numeric values.</p>
+                    <p id="error-message"></p>
                     <button class="popup-button" id="close-popup">Close</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <script>
-        // Wait for DOM content to load before executing scripts
-        document.addEventListener("DOMContentLoaded", function () {
-            // Function to handle currency change
-            function handleCurrencyChange(currency) {
-                var selectedCurrencyElement = document.getElementById('selected-currency');
-                selectedCurrencyElement.textContent = currency;
-
-                // Display median salaries if currency is USD or EUR
-                if (currency === '$') {
-                    displayMedianSalary('US', 57200);
-                } else if (currency === '€') {
-                    displayMedianSalary('UK', 33000);
-                }
-
-                // Trigger the change event
-                selectedCurrencyElement.dispatchEvent(new Event('change'));
-            }
-
-            // Function to display median salary information
-            function displayMedianSalary(country, medianSalary) {
-                document.getElementById('median-salary').innerHTML =
-                    '<h2 class="text-xl font-semibold">Median Salary</h2>' +
-                    '<p class="mt-2">Median salary in ' + country + ': $' + medianSalary.toFixed(2) + '</p>';
-            }
-
-            // Function to calculate salary
-            function calculateRates() {
-                // Get input values
-                var hourlyWage = parseFloat(document.getElementById('hourly-wage').textContent);
-                var hoursPerWeek = parseFloat(document.getElementById('hours-per-week').value);
-                var weeksPerYear = parseFloat(document.getElementById('weeks-per-year').value);
-
-                // Check if any input is empty or not a number
-                if (isNaN(hourlyWage) || isNaN(hoursPerWeek) || isNaN(weeksPerYear)) {
-                    // Show popup
-                    document.getElementById('popup').style.display = 'flex';
-                } else {
-                    // Calculate salary
-                    var annualSalary = hourlyWage * hoursPerWeek * weeksPerYear;
-                    var monthlySalary = annualSalary / 12;
-                    var weeklyPay = annualSalary / 52;
-
-                    // Display calculated salary
-                    document.getElementById('calculated-salary').innerHTML =
-                        '<h2 class="text-xl font-semibold">Calculated Salary</h2>' +
-                        '<p class="mt-2">Annual Salary: $' + annualSalary.toFixed(2) + '</p>' +
-                        '<p>Monthly Salary: $' + monthlySalary.toFixed(2) + '</p>' +
-                        '<p>Weekly Pay: $' + weeklyPay.toFixed(2) + '</p>';
-                }
-            }
-
-            // Close popup
-            document.getElementById('close-popup').addEventListener('click', function () {
-                document.getElementById('popup').style.display = 'none';
-            });
-
-            // Handle currency change event
-            document.getElementById('selected-currency').addEventListener('change', function () {
-                var selectedCurrency = this.textContent;
-                // Define exchange rates manually
-                const exchangeRates = {
-                    '$': 1,  // USD is the base currency
-                    '€': 0.85, // Euro to USD exchange rate
-                    '£': 0.75, // British Pound to USD exchange rate
-                    '₹': 74.21, // Indian Rupee to USD exchange rate
-                    '¥': 114.41 // Japanese Yen to USD exchange rate
-                };
-
-                // Update exchange rate based on the selected currency
-                setExchangeRate(exchangeRates[selectedCurrency]);
-            });
-
-            // Update hourly wage slider value
-            document.getElementById('hourly-wage-slider').addEventListener('input', function () {
-                document.getElementById('hourly-wage').textContent = this.value;
-            });
-
-            // Event listener for calculate button
-            document.querySelector('.calculate-button').addEventListener('click', calculateRates);
-        });
-    </script>
+    <script src="Hourly-to-Salary.js"></script>
 
 </body>
 
