CALCULATOR-07 || change the text in diffrent pages

--- a/Salary-to-Hourly.html
+++ b/Salary-to-Hourly.html
@@ -29,7 +29,7 @@
     <div class="calculator-main">
         <div class="calculator-calculation-parent1">
             <div class="calculator-calculation-card2">
-                <h1>Time Calculator</h1>
+                <h1>Salary Calculator</h1>
                 <div class="grid-container">
                     <h2>Currency</h2>
                     <div class="currency-selector">
@@ -77,7 +77,7 @@
         </div>
         <div class="flex-item">
             <div class="time-and-a-half-info">
-                <h1 class="info-heading">Time and a half Calculator</h1>
+                <h1 class="info-heading">Salary Calculator</h1>
                 <p class="info-paragraph">This calculator provides an easy way to calculate the equivalent hourly wage
                     based on your annual salary. It considers total hours worked per week, potential bonuses, and
                     factors in vacation time into its calculations. You can always easily edit the calculator to suit
